res-tf/res-kubeflow19-core/charts/apps/training-operator/templates/ValidatingWebhookConfiguration/validator.training-operator.kubeflow.org-ValidatingWebhookConfiguration.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  labels:
    control-plane: kubeflow-training-operator
  name: validator.training-operator.kubeflow.org
webhooks:
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: training-operator
      namespace: kubeflow
      path: /validate-kubeflow-org-v1-mxjob
  failurePolicy: Fail
  name: validator.mxjob.training-operator.kubeflow.org
  rules:
  - apiGroups:
    - kubeflow.org
    apiVersions:
    - v1
    operations:
    - CREATE
    - UPDATE
    - DELETE
    resources:
    - mxjobs
  sideEffects: None
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: training-operator
      namespace: kubeflow
      path: /validate-kubeflow-org-v1-paddlejob
  failurePolicy: Fail
  name: validator.paddlejob.training-operator.kubeflow.org
  rules:
  - apiGroups:
    - kubeflow.org
    apiVersions:
    - v1
    operations:
    - CREATE
    - UPDATE
    resources:
    - paddlejobs
  sideEffects: None
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: training-operator
      namespace: kubeflow
      path: /validate-kubeflow-org-v1-pytorchjob
  failurePolicy: Fail
  name: validator.pytorchjob.training-operator.kubeflow.org
  rules:
  - apiGroups:
    - kubeflow.org
    apiVersions:
    - v1
    operations:
    - CREATE
    - UPDATE
    resources:
    - pytorchjobs
  sideEffects: None
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: training-operator
      namespace: kubeflow
      path: /validate-kubeflow-org-v1-tfjob
  failurePolicy: Fail
  name: validator.tfjob.training-operator.kubeflow.org
  rules:
  - apiGroups:
    - kubeflow.org
    apiVersions:
    - v1
    operations:
    - CREATE
    - UPDATE
    resources:
    - tfjobs
  sideEffects: None
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: training-operator
      namespace: kubeflow
      path: /validate-kubeflow-org-v1-xgboostjob
  failurePolicy: Fail
  name: validator.xgboostjob.training-operator.kubeflow.org
  rules:
  - apiGroups:
    - kubeflow.org
    apiVersions:
    - v1
    operations:
    - CREATE
    - UPDATE
    resources:
    - xgboostjobs
  sideEffects: None
